add auth in swagger
